Solved action box alignment issue

--- a/apihub-root/wallet/components/document-item-renderer/document-item-renderer.css
+++ b/apihub-root/wallet/components/document-item-renderer/document-item-renderer.css
@@ -34,15 +34,7 @@
     max-height: 12px;
 }
 
-.action-box {
-    background-color: white;
-    position: fixed;
-    margin-top: 35px;
-    margin-right: 10px;
-    border-radius: 6px;
-    border: 1px solid #dedede;
-    display: none;
-}
+
 
 .action {
     padding: 3px 8px;
