--- a/apihub-root/wallet/components/personality-item-renderer/personality-item-renderer.css
+++ b/apihub-root/wallet/components/personality-item-renderer/personality-item-renderer.css
@@ -33,17 +33,6 @@
     max-width: 3px;
     max-height: 12px;
 }
-
-.action-box {
-    background-color: white;
-    position: fixed;
-    margin-top: 35px;
-    margin-right: 10px;
-    border-radius: 6px;
-    border: 1px solid #dedede;
-    display: none;
-}
-
 .action {
     padding: 3px 8px;
 }
